# yt-dlpp

./: .clang-format  .clang-tidy  .cmake-format.yml  .gitignore  .gitmodules  CMakeLists.txt  benchmark.ps1  vcpkg-configuration.json  vcpkg.json
cmake/: ytdlpp-config.cmake.in
examples/: CMakeLists.txt  simple_download.cpp  stream_audio.cpp
include/ytdlpp/: audio_streamer.hpp  downloader.hpp  ejs_bundle.hpp  ejs_solver.hpp  extractor.hpp  http_client.hpp  output_template.hpp  result.hpp  types.hpp  ytdlpp.hpp
overlay-ports/quickjs-ng/: disable_stack_check.patch  portfile.cmake  vcpkg.json
overlay-ports/v8/: portfile.cmake  v8-cmake-features.patch  vcpkg.json
overlay-ports/ytdlpp/: portfile.cmake  vcpkg.json
src/: ejs_solver.cpp  error.cpp  error.hpp  main.cpp  utils.hpp  ytdlpp.cpp
src/downloader/: downloader.cpp  downloader.hpp
src/media/: audio_streamer.cpp  ffmpeg_utils.hpp  muxer.cpp  muxer.hpp
src/net/: http_client.cpp  http_client.hpp
src/scripting/: js_engine.hpp  js_engine_v8.cpp  native_js_solver.cpp  native_js_solver.hpp  quickjs_engine.cpp  quickjs_engine.hpp
src/youtube/: decipher.cpp  decipher.hpp  extractor.cpp  extractor.hpp  innertube.cpp  innertube.hpp  player_script.cpp  player_script.hpp
tests/: compare_get_url.py  compare_json.py  compare_ytdlp.py  speed_test.py  test_audio_language.py  test_cli_args.py
